Sangria, comentarios y arreglo detall

--- a/system_huellitas/views/public/login.html
+++ b/system_huellitas/views/public/login.html
@@ -45,7 +45,7 @@
                                     class="form-control form-control-lg shadow  rounded-3 bg-white">
                                     <div class="olvidaste_contrasenia">
                                         <a class="text-decoration-none text-dark fw-bold"
-                                            href="../public/recuperacion_contra_1.html"> ¿Olvidaste tú contraseña?</a>
+                                            href="../public/recuperacion_contra_1.html"> ¿Olvidaste tu contraseña?</a>
                                     </div>
                             </div>
                         </div>
