--- a/system_huellitas/views/public/recuperacion_contra_1.html
+++ b/system_huellitas/views/public/recuperacion_contra_1.html
@@ -16,28 +16,38 @@
 </head>
 
 <body>
+    <!-- Encabezado de la página -->
     <header>
+        <!-- Menú de navegación -->
         <nav id="navbar"></nav>
     </header>
 
+    <!-- Contenido principal -->
     <main class="mt-5 p-5">
+        <!-- Contenedor principal -->
         <div class="container mt-5">
+            <!-- Fila para alinear contenido -->
             <div class="row justify-content-md-end">
+                <!-- Columna para el formulario -->
                 <div class="col-12 col-md-6 text-center">
+                    <!-- Título y descripción del formulario -->
                     <div>
                         <h2 class="fw-semibold">Recuperar Contraseña</h2>
                         <p class="fw-normal fs-5">Ingresar tu correo eléctronico asociado a tu cuenta.</p>
                     </div>
+                    <!-- Formulario de recuperación de contraseña -->
                     <form action="" id="recuperacion_contrasenia" class="mt-5 p-4">
+                        <!-- Campo de correo electrónico -->
                         <div class="mb-5">
                             <label for="contrasenia_nueva" class="form-label fw-semibold">Correo</label>
                             <input type="email" id="contrasenia_nueva" name="contraseniaActual"
                                 class="form-control form-control-lg shadow rounded-4 bg-white">
                         </div>
-                        <br>
+                        <!-- Botón para enviar el código de recuperación -->
                         <div class="text-center">
                             <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4"
                                 href="../../views/public/recuperacion_contra2.html">Enviar código</a>
+                            <!-- Instrucciones adicionales -->
                             <p class="fw-semibold">Recuerda revisar tu bandeja de correos para ver el código que
                                 debes ingresar.</p>
                         </div>
@@ -47,7 +57,7 @@
         </div>
     </main>
 
-    <!-- Agregamos nuestro footer a la pantalla -->
+    <!-- Pie de página -->
     <footer id="footer"></footer>
 
     <!-- Agregamos el framework de boostrap - js -->
