--- a/system_huellitas/views/public/terminos_condiciones.html
+++ b/system_huellitas/views/public/terminos_condiciones.html
@@ -22,13 +22,14 @@
 
     <main>
         <div class="container-fluid text-center bg-orange-cream-color text-white pt-5">
+            <!--Titulo del contenido-->
             <br>
             <h1 class="p-3">
                 Términos y condiciones
             </h1>
             <br>
         </div>
-
+        <!--De aquí para abajo solo son terminos y condiciones, se ajusta el texto cuando hay subtitulos y se pone justificado y etc.-->
         <div class="mt-5 p-5">
             <div class="container text-center">
                 <p class="text-justify">
