--- a/system_huellitas/views/public/categorias_perro.html
+++ b/system_huellitas/views/public/categorias_perro.html
@@ -16,43 +16,58 @@
 </head>
 
 <body>
+    <!-- Encabezado de la página -->
     <header>
+        <!-- Barra de navegación -->
         <nav id="navbar"></nav>
     </header>
 
+    <!-- Contenido principal -->
     <main class="mt-5 p-5">
+        <!-- Contenedor principal -->
         <div class="container-fluid bg-yellow-cream-color p-5 mt-10 rounded-4">
+            <!-- Fila para organizar el contenido -->
             <div class="row">
+                <!-- Columna para la primera opción de categoría -->
                 <div class="col-md-6 col-sm-12">
+                    <!-- Enlace a la página de productos para perros - cuidados -->
                     <a href=".././public/productos_perros_cuidados.html">
-                    <img src="../../resources/img/png/opcion1-categoriaperros.png" class="uno img-fluid float-end py-4"
-                        alt="categoria1">
+                        <!-- Imagen de la primera opción de categoría -->
+                        <img src="../../resources/img/png/opcion1-categoriaperros.png"
+                            class="uno img-fluid float-end py-4" alt="categoria1">
                     </a>
                 </div>
+                <!-- Columna para la segunda y tercera opción de categoría -->
                 <div class="col-md-6 col-sm-12">
+                    <!-- Enlace a la página de productos para perros - entrenamiento -->
                     <a href=".././public/productos_perros_entrenamiento.html">
-                    <img src="../../resources/img/png/opcion2-categoriaperros.png" class="dos img-fluid py-4"
-                        alt="categoria2">
-                        </a>
+                        <!-- Imagen de la segunda opción de categoría -->
+                        <img src="../../resources/img/png/opcion2-categoriaperros.png" class="dos img-fluid py-4"
+                            alt="categoria2">
+                    </a>
+                    <!-- Contenedor adicional para la tercera opción de categoría -->
                     <div class="mt-4">
+                        <!-- Enlace a la página de productos para perros - comida -->
                         <a href=".././public/productos_perros_comida.html">
-                        <img src="../../resources/img/png/opcion3-categoriaperros.png" class="tres img-fluid"
-                            alt="categoria3">
+                            <!-- Imagen de la tercera opción de categoría -->
+                            <img src="../../resources/img/png/opcion3-categoriaperros.png" class="tres img-fluid"
+                                alt="categoria3">
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
     </main>
 
-    <!-- Agregamos nuestro footer a la pantalla -->
+    <!-- Pie de página -->
     <footer id="footer"></footer>
 
-    <!-- Agregamos el framework de boostrap - js -->
+    <!-- Scripts de JavaScript -->
+    <!-- Bootstrap -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Agregamos la ruta para agregar el menu -->
+    <!-- Utilidades públicas -->
     <script src="../../controllers/utils/public.js"></script>
 </body>
+
 
 </html>
