--- a/system_huellitas/views/public/recuperacion_contra2.html
+++ b/system_huellitas/views/public/recuperacion_contra2.html
@@ -17,42 +17,56 @@
 
 <body>
     <header>
+        <!-- Barra de navegación -->
         <nav id="navbar"></nav>
     </header>
 
     <main class="mt-5 p-5">
+        <!-- Contenedor principal -->
         <div class="container mt-5">
             <div class="col-sm-12 col-md-6">
+                <!-- Título y descripción del formulario -->
                 <div class="text-center">
                     <h2 class="fw-semibold">Recuperar Contraseña</h2>
                     <p class="fw-normal fs-5">Ingresar el código enviado a tu correo.</p>
                 </div>
+                <!-- Formulario de recuperación de contraseña -->
                 <form action="" id="recuperacion_contrasenia" class="mt-5 p-4">
+                    <!-- Campo de código -->
                     <div class="mb-5">
                         <label for="contrasenia_nueva" class="form-label fw-semibold">Código</label>
-                        <div class="container text-center">
+                        <!-- Contenedor para los campos de entrada de código -->
+                        <div class="text-center">
                             <div class="row d-flex justify-content-center gx-5">
+                                <!-- Bloques de entrada de código -->
                                 <div class="q col-2">
-                                    <div class="p-3"> <input type="text" class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
+                                    <div class="p-3"> <input type="text"
+                                            class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
                                 </div>
                                 <div class="q col-2">
-                                    <div class="p-3"> <input type="text" class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
+                                    <div class="p-3"> <input type="text"
+                                            class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
                                 </div>
                                 <div class="q col-2">
-                                    <div class="p-3"> <input type="text" class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
+                                    <div class="p-3"> <input type="text"
+                                            class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
                                 </div>
                                 <div class="q col-2">
-                                    <div class="p-3"> <input type="text" class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
+                                    <div class="p-3"> <input type="text"
+                                            class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
                                 </div>
                                 <div class="q col-2">
-                                    <div class="p-3"> <input type="text" class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
+                                    <div class="p-3"> <input type="text"
+                                            class="input-caracter shadow rounded-2 bg-white" maxlength="1"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <!-- Botón para enviar el código -->
                     <div class="text-center">
                         <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4"
                             href="../public/recuperacion_contra3.html">Enviar código</a>
+                        <!-- Instrucciones adicionales -->
                         <p class="fw-semibold">Recuerda revisar tu bandeja de correos para ver el código que debes
                             ingresar.</p>
                     </div>
@@ -61,13 +75,16 @@
         </div>
     </main>
 
-    <!-- Agregamos nuestro footer a la pantalla -->
+    <!-- Pie de página -->
     <footer id="footer"></footer>
 
-    <!-- Agregamos el framework de boostrap - js -->
+    <!-- Scripts de JavaScript -->
+    <!-- Bootstrap -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Agregamos la ruta para agregar el menu -->
+    <!-- Utilidades públicas -->
     <script src="../../controllers/utils/public.js"></script>
 </body>
+
+
 
 </html>
