Comentando mis pantallas

--- a/system_huellitas/views/public/carrito_2.html
+++ b/system_huellitas/views/public/carrito_2.html
@@ -17,6 +17,7 @@
 
 <body class="bg-beige-color">
 
+     <!-- Agregamos nuestro navbar -->
     <header class="p-5 mt-3">
         <nav id="navbar"></nav>
     </header>
@@ -28,7 +29,9 @@
                 <p class="ms-3 mt-2">Regresar a mi carrito</p>
             </div>
 
+            <!-- Row que contiene dos columnas -->
             <div class="row gx-5 mb-5 gy-5">
+                <!-- Col 1 - Contiene formulario para agregar la direccion -->
                 <div class="col-sm-12 col-md-8">
                     <div class="d-flex justify-content-start mt-4">
                         <img src="../../resources/img/png/advertencia.png" width="50px" height="50px">
@@ -59,6 +62,7 @@
                             class="btn btn-orange-color text-light col-md-4 col-sm-12">Comprar ahora</a>
                     </form>
                 </div>
+                <!-- Col 2 - Contiene el total a pagar de productos-->
                 <div class="col-sm-12 col-md-4">
                     <div class="bg-white p-4 shadow rounded-4">
                         <p class="fw-semibold mb-5">Total productos</p>
@@ -76,6 +80,7 @@
         </div>
     </main>
 
+    <!-- Agregamos el footer -->
     <footer id="footer"></footer>
     
     <!-- Agregamos el framework de boostrap - js -->
