--- a/system_huellitas/views/public/carrito_3.html
+++ b/system_huellitas/views/public/carrito_3.html
@@ -17,6 +17,7 @@
 
 <body class="bg-beige-color">
 
+    <!-- Agregamos nuestro navbar -->
     <header class="p-5 mt-4">
         <nav id="navbar"></nav>
     </header>
@@ -29,7 +30,9 @@
             </div>
             <hr>
             <div>
+                <!-- Contiene una row que tiene dos columna -->
                 <div class="row mb-5 mt-5 gx-5">
+                    <!-- Primera columna -->
                     <div class="col-md-8 col-sm-12">
                         <div class="mb-5">
                             <label for="nombre_cliente" class="form-label fw-semibold">Nombre del comprador</label>
@@ -83,6 +86,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- Segunda columna -->
                     <div class="col-md-4 col-sm-12">
                         <div class="p-4">
                             <div class="d-flex justify-content-start mb-4">
@@ -108,6 +112,7 @@
         </div>
     </main>
 
+    <!-- Agregamos nuestro footer -->
     <footer id="footer"></footer>
 
     <!-- Agregamos el framework de boostrap - js -->
