--- a/system_huellitas/views/public/index.html
+++ b/system_huellitas/views/public/index.html
@@ -21,7 +21,7 @@
         <nav id="navbar"></nav>
     </header>
 
-    <div class="mt-5 p-5">
+    <main class="mt-5 p-5">
         <!-- Row que contiene las dos imagenes -->
         <div class="row d-flex align-items-center">
             <div class="col-sm-12 col-md-8 py-4">
@@ -297,10 +297,10 @@
                 </div>
             </div>
         </div>
-    </div>
+        </div>
 
 
-    </div>
+    </main>
 
     <footer id="footer"></footer>
 
