--- a/system_huellitas/views/public/registro.html
+++ b/system_huellitas/views/public/registro.html
@@ -82,8 +82,8 @@
                         </div>
                         <!-- Boton y texto -->
                         <div class="text-center mt-5">
-                            <a
-                                class="btn btn-brown-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-4 mx-auto" href="">Regístrarse</a>
+                            <a class="btn btn-brown-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-4 mx-auto"
+                                href="">Regístrarse</a>
                             <div>
                                 ¿Ya tienes una cuenta?<a class="text-decoration-none text-dark fw-bold"
                                     href="../public/login.html"> Iniciar sesión</a>
