--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -17,6 +17,7 @@
 
 <body class="bg-beige-color">
 
+    <!-- Agregamos nuestro navbar -->
     <header class="p-5 mt-5">
         <nav id="navbar"></nav>
         <div class="container">
@@ -103,12 +104,13 @@
                             <p class="fw-bold fs-5">Subtotal</p>
                             <p class="fw-bold fs-5">$100.00</p>
                         </div>
-                        <a href="../../views/public/carrito_2.html" class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4">Ir a pagar</a>
+                        <a href="../../views/public/carrito_2.html"
+                            class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4">Ir a pagar</a>
                     </div>
                 </div>
             </div>
             <div class="d-flex justify-content-start mt-4 mb-5">
-                <a href=""><img src="../../resources/img/png/row.png"></a>
+                <a href="../../views/public/productos_perros_comida.html"><img src="../../resources/img/png/row.png"></a>
                 <p class="ms-3 mt-1">Seguir comprando</p>
             </div>
         </div>
@@ -121,8 +123,9 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body p-4">
-                        <p class="fw-semibold">Antes de  pagar es necesario que inicies sesión o crees una cuenta</p>
-                        <a href="../../views/public/carrito_2.html" class="btn btn-orange-color text-light">Iniciar sesión</a>
+                        <p class="fw-semibold">Antes de pagar es necesario que inicies sesión o crees una cuenta</p>
+                        <a href="../../views/public/carrito_2.html" class="btn btn-orange-color text-light">Iniciar
+                            sesión</a>
                     </div>
                 </div>
             </div>
