--- a/system_huellitas/views/public/login.html
+++ b/system_huellitas/views/public/login.html
@@ -44,7 +44,7 @@
                                 <input type="password" id="password_cliente_login" name="passwordClienteLogin"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white">
                                     <div class="olvidaste_contrasenia">
-                                        <a class="text-decoration-none text-dark fw-bold"
+                                        <a class="text-decoration-none text-dark fw-semibold"
                                             href="../public/recuperacion_contra_1.html"> ¿Olvidaste tu contraseña?</a>
                                     </div>
                             </div>
@@ -54,7 +54,7 @@
                             <a
                                 class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white" href="index.html">Iniciar sesión</a>
                             <div>
-                                ¿No tienes una cuenta?<a class="text-decoration-none text-dark fw-bold"
+                                ¿No tienes una cuenta?<a class="text-decoration-none text-dark fw-semibold"
                                     href="../public/registro.html"> Registrate</a>
                             </div>
                         </div>
