--- a/system_huellitas/views/public/sobre_nosotros.html
+++ b/system_huellitas/views/public/sobre_nosotros.html
@@ -20,17 +20,15 @@
     </header>
 
     <main>
-        <div class="container-fluid text-center bg-orange-cream-color text-white pt-5">
-            <br>
-            <h1 class="p-3">
+        <div class="bg-orange-cream-color text-white mt-5 p-5 d-flex align-items-center justify-content-center">
+            <h1 class="mt-4">
                 Sobre Nosotros
             </h1>
-            <br>
         </div>
 
-        <div class="mt-5 p-5">
-            <div class="container text-center">
-                <h3>¡Bienvenido a Huellitas Pet's! 🐾</h3>
+        <div class="mt-3 p-5">
+            <div class="container">
+                <h3 class="text-center mb-3">¡Bienvenido a Huellitas Pet's! 🐾</h3>
                 <p class="text-justify">
                     Somos más que una tienda en línea; somos amantes apasionados de los perros y gatos que
                     creemos en proporcionar a tus peludos amigos las mejores experiencias de vida. En Huellitas
@@ -38,7 +36,7 @@
                     para satisfacer todas las necesidades de tus queridos compañeros caninos y felinos.
                 </p>
                 <br>
-                <h3>
+                <h3 class="text-center mb-3">
                     Nuestra Pasión
                 </h3>
                 <p class="text-justify">
@@ -47,7 +45,7 @@
                     productos de alta calidad que promueven la salud, el bienestar y la felicidad de tus amigos peludos.
                 </p>
                 <br>
-                <h3>
+                <h3 class="text-center mb-3">
                     Variedad de Productos
                 </h3>
                 <p class="text-justify">
@@ -101,7 +99,7 @@
             </div>
         </div>
 
-        <div class="mt-5 p-5">
+        <div class="mt-3 p-5">
             <div class="container text-center">
                 <h3>¡Conócenos Más!</h3>
                 <br>
